# teapot

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: main.cpp.4C96014A516D91D3.idx  tee_pot.cpp.2953DEFEC2F7B7D0.idx  tee_pot.h.9ECAA100E8CC869D.idx
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  directory.h  file_system_node.cpp  main.cpp  tea_pot.cpp  tea_pot.h  tea_pot_args.cpp  tea_pot_args.h  tea_pot_args_parser.cpp  tea_pot_args_parser.h  tee_pot.cpp  tee_pot.h  templates.cpp  templates.h
src/file_system/: CMakeLists.txt  directory.cpp  directory.h  file.cpp  file.h  file_system_node.h
src/file_templates/: CMakeLists.txt
src/project_builder/: CMakeLists.txt  directory.cpp  directory.h  file.cpp  file.h  node.cpp  node.h  project_builder.cpp  project_builder.h  project_file.cpp  project_file.h  project_tree.cpp  project_tree.h
src/teapot/: CMakeLists.txt  project_builder.cpp  project_dir.cpp  project_dir.h  project_file.h  project_tree.cpp  teapot.cpp  teapot.h  teapot_args.cpp  teapot_args.h  teapot_args_parser.cpp
src/teapot_lib/: CMakeLists.txt  project_builder.h  project_dir.cpp  project_dir.h  project_file.h  project_tree.h  tea_pot.cpp  tea_pot.h  tea_pot_args.cpp  tea_pot_args_parser.cpp  tea_pot_args_parser.h  teapot.cpp  teapot.h  teapot_args.cpp  teapot_args_parser.cpp  teapot_args_parser.h  templates.cpp  templates.h
test/: CMakeLists.txt  project_file_test.cpp
